--- a/src/views/realtime.hbs
+++ b/src/views/realtime.hbs
@@ -11,6 +11,8 @@
     <input type="text" placeholder="descripcion del producto" name="description">
      <br> <br>
     <input type="text" placeholder="Stock del producto" name="stock">
+     <br> <br>
+    <input type="text" placeholder="thumbnail del producto" name="thumbnail">
 
     <button type="submit">Crear producto</button>
     
