Socket del chat

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/realtimeproducts">Productos tiempo real</a>
+        <a href="/chat">Chat en tiempo real</a>
     </nav>
   {{{body}}}
 </body>
