--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,6 +10,7 @@
         <a href="/">Home</a>
         <a href="/realtimeproducts">Productos tiempo real</a>
         <a href="/chat">Chat en tiempo real</a>
+        <a href="/login">Login</a>
     </nav>
   {{{body}}}
 </body>
