session del formulario

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,9 +8,12 @@
 <body>
     <nav>
         <a href="/">Home</a>
-        <a href="/realtimeproducts">Productos tiempo real</a>
-        <a href="/chat">Chat en tiempo real</a>
+        {{!-- <a href="/realtimeproducts">Productos tiempo real</a>
+        <a href="/chat">Chat en tiempo real</a> --}}
+       <a href="/signUp">SignUp</a>
         <a href="/login">Login</a>
+        <a href="/profile">Profile</a>
+
     </nav>
   {{{body}}}
 </body>
