--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,10 @@
 <h1>Page Login</h1>
 
+
+<p>{{message}}</p>
+<p>{{error}}</p>
+
 <form method="post" action="/api/users/login">
-<input type="name" name="name" placeholder="Your name">
     <input type="email" name="email" placeholder="user addres " />
   <input type="password" name="password" placeholder="user password" />
 
