--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -4,5 +4,9 @@
 
 {{error}}
 <p>Bienvenid@ {{userName}}</p>
+<br>
+<button id="getProfile" >Get profile</button>
 
 <a href="/api/users/logout"> Cerrar sesion</a>
+
+<script src="/js/profile.js"></script>
