falta arreglar unos errores y agregué localStrategy

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,8 +1,8 @@
 <h1>Page Login</h1>
 
 
-<p>{{message}}</p>
-<p>{{error}}</p>
+<p style="color:green">{{message}}</p>
+<p style="color:red">{{error}}</p>
 
 <form method="post" action="/api/users/login" id="loginForm">
     <input type="email" name="email" placeholder="user addres " />
