--- a/src/views/signupView.hbs
+++ b/src/views/signupView.hbs
@@ -6,7 +6,7 @@
 
 <form method="post" action="/api/users/signUp">
 <input type="text" name="name" placeholder="Your name">
-    <input type="email" name="email" placeholder="user addrres " />
+    <input type="email" name="email" placeholder="user address " />
   <input type="password" name="password" placeholder="user password" />
 
     <button>Registrarse</button>
