--- a/src/views/signupView.hbs
+++ b/src/views/signupView.hbs
@@ -4,12 +4,11 @@
 <p style="color: red;">{{error}}</p>
 
 
-<form method="post" action="/api/users/signUp">
+<form method="post" action="/api/users/signUp" id="signupForm">
 <input type="text" name="name" placeholder="Your name">
     <input type="email" name="email" placeholder="user address " />
   <input type="password" name="password" placeholder="user password" />
 
-    <button>Registrarse</button>
+    <button type="submit">Registrarse</button>
 </form>
 
-<script src="/js/users.js"></script>
