arreglé signup,login y profile

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,7 +10,7 @@
         <a href="/">Home</a>
         {{!-- <a href="/realtimeproducts">Productos tiempo real</a>
         <a href="/chat">Chat en tiempo real</a> --}}
-       <a href="/signUp">SignUp</a>
+       <a href="/signup">SignUp</a>
         <a href="/login">Login</a>
         <a href="/profile">Profile</a>
 
