--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -2,7 +2,7 @@
 
 
 <p style="color:green">{{message}}</p>
-<p style="color:red">{{error}}</p>
+<p style="color:red" id="errorMsg">{{error}}</p>
 
 <form method="post" action="/api/users/login" id="loginForm">
     <input type="email" name="email" placeholder="user addres " />
