i fixed users signup

--- a/src/views/signupView.hbs
+++ b/src/views/signupView.hbs
@@ -4,10 +4,10 @@
 
 
 
-  <form action="/api/users/signup" method="post">
-      <input type="text" name="name" placeholder="name" />
+  <form action="/api/users/signup" method="post" id="signupForm">
+      <input type="text" name="first_name" placeholder="name" />
       <br />
-      <input type="text" name="lastname" placeholder="lastname" />
+      <input type="text" name="last_name" placeholder="lastname" />
       <br />
       <input type="number" name="age" placeholder="age" />
       <br />
