--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,6 +13,7 @@
        <a href="/signup">SignUp</a>
         <a href="/login">Login</a>
         <a href="/profile">Profile</a>
+        <a href="/cart">Cart</a>
 
     </nav>
   {{{body}}}
