adde email and reset password

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -12,4 +12,12 @@
     <button type="submit" >login</button>
 </form>
 
+
+<hr>
+
+<a href="/forgot-password">
+  Olvidé mi contraseña
+</a>
+
+
 <script src="/js/login.js"></script>
