--- a/src/views/signupView.hbs
+++ b/src/views/signupView.hbs
@@ -4,7 +4,7 @@
 
 
 
-  <form action="/api/users/signup" method="post" id="signupForm">
+  <form action="/api/users/signup" method="post" id="signupForm" enctype="multipart/form-data">
       <input type="text" name="first_name" placeholder="name" />
       <br />
       <input type="text" name="last_name" placeholder="lastname" />
@@ -14,6 +14,8 @@
       <input type="email" name="email" placeholder="email" />
       <br />
       <input type="password" name="password" placeholder="password" />
+      <br />
+      <input type="file" name="avatar"  />
       <br />
       <button>sign up</button>
     </form>
