--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -4,7 +4,7 @@
 
 {{error}}
 {{userName}}
-<p id="welcomeUser"> </p>
+<p id="welcomeUser">{{user.first_name}} </p>
 <br>
 <button id="getProfile" >Get profile</button>
 
