agregué datos que faltaban

--- a/src/views/forgotPassView.hbs
+++ b/src/views/forgotPassView.hbs
@@ -1,10 +1,8 @@
-<h1>Olvidaste tu cintraseña?</h1>
+<h1>Olvidaste tu Contraseña</h1>
 
 <p>Ingresa tu correo electronico</p>
-
-<form action="/api/users/forgot-password" method="post">
-    <input type="email" placeholder="correo electronico" name="email">
+<form action="/api/sessions/forgot-password" method="post">
+    <input type="email" placeholder="Correo electronico" name="email">
     <br>
     <button>Enviar link a mi correo</button>
-
 </form>
