--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <a href="/">Home</a>
-        {{!-- <a href="/realtimeproducts">Productos tiempo real</a>
-        <a href="/chat">Chat en tiempo real</a> --}}
-       <a href="/signup">SignUp</a>
-        <a href="/login">Login</a>
-        <a href="/profile">Profile</a>
-        <a href="/cart">Cart</a>
+    <title>Proyecto</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/{{style}}">
+   
 
-    </nav>
-  {{{body}}}
+</head>
+<body >
+    
+<section>
+  <nav>
+    
+    <ul>
+      <li  class="active"><a class="nav__link" href="/">Home</a></li>
+      <li> <a class="nav__link" href="/message">Chat</a></li>
+      <li><a class="nav__link" href="/realTimeProducts">Real Time</a></li>
+      <li>  <a class="nav__link" href="/products">Paginacion</a></li>
+      <li><a class="nav__link" href="/profile" >Perfil</a></li>
+      <li>   <a class="nav__link" href="/register">Registro</a></li>
+    </ul>
+  </nav>
+</section>
+
+    {{{body}}}
 </body>
 </html>
