--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,16 +1,30 @@
+<section class="sectionHome">
+    <h1 class="titleList">Listado de Productos</h1>
+    <div >
 
-    <h1>Home</h1>
+        {{#if userAdmin}}
+            <h2>Hola, <span class="userAdmin"> {{userFirst_name}}</span></h2>
+            <p>Sos <span class="rolAdmin" >{{userRole}}</span> de la pagina</p>
+            {{else}}
+            <h2>Hola, <span class="user">{{userFirst_name}} {{userLast_name}}</span></h2>
+            <p>Eres <span class="rolUser" >{{userRole}}</span>, Ya puedes navegar </p>
+            
+        {{/if}}
 
-{{#each payload}}
-<div>Nombre del producto: {{this.title}}, price:{{this.price}}</div>
-<button class="addProductToCart" data-product-id =`{{this._id}}` >Agregar al carrito</button>
+    </div>
 
 
-
-{{/each }}
-
-<a href="{{prevLink}}"> Anterior</a>
-<a href="{{nextLink}}">Siguiente</a>
-
-<script src="/js/home.js"></script>
- 
+    <div class="container">
+        {{#each products}}
+            <div class="list">
+                <p>Imagen: {{this.thumbnail}}</p>
+                <p>Nombre Producto: {{this.title}}</p>
+                <p>Precio: {{this.price}}</p>
+                <p>Descripcion: {{this.description}}</p>
+                <p>Code: {{this.code}}</p>
+                <p>Stock: {{this.stock}}</p>
+                <p>Categoria: {{this.category}}</p>
+            </div>
+        {{/each}}
+    </div>
+</section>
