--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,23 +1,45 @@
-<h1>Page Login</h1>
+
+<section class="sectionLogin">
+    
+
+<span class="message">{{message}}</span>
+
+<span class="error">{{error}}</span> 
 
 
-<p style="color:green">{{message}}</p>
-<p style="color:red" id="errorMsg">{{error}}</p>
+<form action="/api/sessions/login" method="post" >
+    <div class="login-box">
+  <h2>Login</h2>
+ 
+  <form>
+    <div class="user-box">
+      <input type="text" name="email" required="">
+         <label  for="email">Correo electronico:</label>
 
-<form id="loginForm">
-    <input type="email" name="email" placeholder="user addres " />
-    <br>
-  <input type="password" name="password" placeholder="user password" />
+    </div>
+    <div class="user-box">
+      <input type="password" name="password" required="">
+         <label  for="password">Contraseña:</label>
+    </div>
+       <button >Iniciar Sesión</button>
+    
+     <p>No tienes una cuenta? Registrate <a class="aqui" href="/register">aqui</a></p>
+  </form>
+  <hr>
+<a href="/forgot-password">Olvidaste tu Contraseña</a>
+</div>
 
-    <button type="submit" >login</button>
+ 
+
 </form>
 
 
-<hr>
-
-<a href="/forgot-password">
-  Olvidé mi contraseña
-</a>
+</section>
 
 
-<script src="/js/login.js"></script>
+
+
+
+
+
+
