--- a/src/views/realtime.hbs
+++ b/src/views/realtime.hbs
@@ -1,30 +1,76 @@
-<h1>Productos en tiempo real</h1>
 
 
-<h2>Formulario para crear un producto</h2>
+<section class="sectionProducts">
+    <form id="productForm">
+        <div class="login-box">
+          <h1 class="title">Agregar productos</h1>
 
-<form id="createProductForm" action="">
-    <input type="text" placeholder="Nombre del producto" name="title">
-     <br> <br>
-    <input type="text" placeholder="Precio del producto" name="price">
-     <br> <br>
-    <input type="text" placeholder="descripcion del producto" name="description">
-     <br> <br>
-    <input type="text" placeholder="Stock del producto" name="stock">
-     <br> <br>
-    <input type="text" placeholder="thumbnail del producto" name="thumbnail">
+<p style="color: red">{{error}}</p>
+ <h2>Formulario para cargar productos</h2>
+ 
 
-    <button type="submit">Crear producto</button>
+    <div class="user-box">
+       <input type="text" name="title"  >
+         <label  for="title">Nombre del producto:</label>
+
+    </div>
+    <div class="user-box">
+       <input type="text" name="description" >
+         <label  for="description">Descripción del producto</label>
+    </div>
+    <div class="user-box">
+          <input type="text" name="price" >
+         <label  for="price">Precio:</label>
+    </div>
+    <div class="user-box">
+            <input type="text" name="code" >
+         <label  for="code">Código:</label>
+    </div>
+    <div class="user-box">
+         <input type="text" name="thumbnail" >
+   
+         <label  for="thumbnail">Imagen:</label>
+    </div>
+    <div class="user-box">
+        <input type="text" name="stock" >
+         <label  for="stock">Stock:</label>
+    </div>
+    <div class="user-box">
+         <input type="text" name="category" >
+         <label  for="category">Categoría del producto":</label>
+    </div>
+
+            <button type="submit">Agregar Producto</button>
     
-</form>
+   
 
 
-<hr>
-<h2>Listado de productos</h2>
-
-<div >
-    <ul id="productList"></ul>
 </div>
 
+
+
+    
+    </form>
+  
+</section>
+    
+   
+
+
+
+
+  <div class="containerProducts">
+    <h2 >Listado de Productos</h2>
+
+   
+    <ul class="productList" id="productList">
+
+    </ul>
+  </div>
+
+
+
+
+{{!-- configuro websocket del lado del cliente --}}
 <script src="socket.io/socket.io.js"></script>
-<script src="js/realtime.js"></script>
+<script src="js/realTime.js"></script>
